<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:match="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/bg_page"
    android:orientation="vertical">


    <LinearLayout
        android:paddingLeft="55dp"
        android:paddingRight="55dp"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:paddingTop="140dp"
        android:layout_centerInParent="true"
        android:background="@mipmap/bg_employ_list_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:paddingTop="50dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_marginTop="30dp"
                android:gravity="left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/btn_date"
                    android:background="@drawable/shape_employ_button"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <Spinner
                    android:paddingLeft="5dp"
                    android:drawableRight="@mipmap/icon_arrow_down"
                    android:id="@+id/spn_data_mode"
                    android:layout_width="108dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/tv_date"
                    android:background="@drawable/selector_btn_take_photo"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

                <TextView
                    android:layout_marginLeft="10dp"
                    android:onClick="exportToUD"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="导出数据"
                    android:background="@drawable/selector_btn_take_photo"
                    android:layout_alignParentRight="true"
                    android:layout_width="108dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <RelativeLayout
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_centerInParent="true"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/shape_system_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="38dp"
                    android:textColor="@color/white"
                    android:text="通行记录"/>
            </RelativeLayout>

            <FrameLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_gravity="right"
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/icon_back"/>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:padding="5dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:background="@drawable/shape_system_name"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rl_employ_top"
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <LinearLayout
                android:id="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/shape_employ_list"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sign_list_filed_index"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/sign_list_filed_time"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sign_list_filed_name"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/sign_list_filed_job"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/sign_list_filed_head"
                    android:textColor="@color/white"
                    android:textSize="20dp" />
            </LinearLayout>

            <FrameLayout
                android:layout_below="@+id/layout_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ListView
                    android:id="@+id/lv_sign_List"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <com.wang.avi.AVLoadingIndicatorView
                    android:id="@+id/pb_load_list"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:id="@+id/tv_load_tips"
                    android:textSize="26dp"
                    android:textColor="@color/white"
                    android:text="数据已全部上传"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>